gcc/testsuite/g++.dg/concepts/refine2.C
concept C<typename T> : C<T*> { } // { dg-error "refine" }
